# mini-physics-engine

./: CMakeLists.txt  LICENSE
include/mini_physics_engine/: WorldConstants.h
include/mini_physics_engine/math/: Point2.h  Rotation2.h  Vector2.h
include/mini_physics_engine/physics/: Particle.h
src/: main.cpp
src/math/: Point2.cpp  Vector2.cpp
src/physics/: Particle.cpp
